# faxmachininator

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/: black_white_template.txt  color_template.txt  colorkeys.txt  colorsample-1.txt  colorsample-2.txt  colorsample.txt  colorsample1.txt  colorsample3.txt  colorsampleSpr24.txt  sample.txt  sample2.txt  sample3.txt  sample4.txt
data/black_and_white/: README.md  bw_image_template.txt
data/color_projects/: README.md  color_image_template.txt
faxmachininator/: app.py  controller.py  turtle_app.py
tests/: test_faxmachininator.py
